--- a/main.html
+++ b/main.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Job Application Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h2>Job Application Form</h2>
+
+  <form method="post">
+    
+    <!-- Name -->
+    <label for="name">Name *</label>
+    <input type="text" id="name" required>
+
+    <!-- Email -->
+    <br><br>
+    <label for="email">Email *</label>
+    <input type="email" id="email" required>
+
+    <!-- Gender -->
+    <br><br>
+    <label>Gender *</label><br>
+    <input type="radio" id="male" name="gender" value="Male" required>
+    <label for="male">Male</label>
+
+    <input type="radio" id="female" name="gender" value="Female" required>
+    <label for="female">Female</label>
+
+    <input type="radio" id="other" name="gender" value="Other" required>
+    <label for="other">Other</label>
+
+    <!-- Laptop Brands -->
+    <br><br>
+    <label for="laptop">Laptop Brands</label>
+    <select id="laptop">
+      <option value="">--Select a brand--</option>
+      <option value="apple">Apple</option>
+      <option value="asus">Asus</option>
+      <option value="hp">HP</option>
+    </select>
+
+    <!-- Age -->
+    <br><br>
+    <label for="age">Age *</label>
+    <input type="number" id="age" required>
+
+    <!-- Date of Birth -->
+    <br><br>
+    <label for="dob">Date of Birth *</label>
+    <input type="date" id="dob" required>
+
+    <!-- Password -->
+    <br><br>
+    <label for="password">Password *</label>
+    <input type="password" id="password" required>
+
+    <!-- Portfolio URL -->
+    <br><br>
+    <label for="portfolio">Portfolio URL</label>
+    <input type="url" id="portfolio">
+
+    <!-- Submit Button -->
+    <br><br>
+    <button type="submit">Submit</button>
+
+  </form>
 
 </body>
-
 </html>
